Update package name and dependencies